# GmodDotNet.Tests.NativeNuGets

./: .gitignore  LICENSE  README.md
.github/workflows/: build-and-deploy.yml
packager/: pack.csproj
simple_native_lib/: CMakeLists.txt  library.cpp  library.h
